--- a/studentbio.html
+++ b/studentbio.html
@@ -2,25 +2,33 @@
 <html lang="en">
 	<head>
 		<title>Shirley Ramirez's Bio</title>
+		<!-- Linking CSS -->
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 <body>
 	<!--Bio's header -->
-	<header>
-		<h1>Shirley Ramirez's Bio</h1>
-	</header>
+	<div class="container">
+		<header>
+			<h1>Shirley Ramirez's Bio</h1>
+		</header>
+	</div>
 	<!-- -->
-	<h3>Shirley Ramirez</h3>
-	
-	<!--Image link -->
-	<img src="../DSC_0580.JPG" height="200" width="200" alt="picture of my son">
-	<p>I can't find a picture of me yet on this computer. But I am a mom of this awesome kid in the picture :). </p>
-	
+	<section id="main-bio">
+		<h2>Shirley Ramirez</h3>
+		
+		<!--Image link -->
+		<img id="bio-image" src="../11659389_10154063869729126_206180686374283987_n.jpg" height="200" width="200" alt="Shirley Ramirez">
+		<p>Hi! I am Shirley Ramirez, 36 yrs old. I originally came from the Philippines and now living in Chandler Arizona. I am a mom to a wonderful son. </p>
+	</section>
+
 	<!--Contact info -->
-	<h3>Contact Info</h3>
-		<ul>
-			<li>Email: <a href="shirley.mramirez@yahoo.com">shirley.mramirez@yahoo.com</a></li>
-			<li>Github: <a href="https://github.com/shirleymramirez/student_bio">ShirleyRamirez</a></li>
-			<li>Portfolio:<a href="#">coming soon</a></li>
-		</ul>
+	<section id="contact-info">
+		<h2>Contact Info</h3>
+			<ul>
+				<li>Email: <a href="#">shirley.mramirez@yahoo.com</a></li>
+				<li>Github: <a href="https://github.com/shirleymramirez/student_bio">ShirleyRamirez</a></li>
+				<li>Portfolio:<a href="#">coming soon</a></li>
+			</ul>
+	</section>
 </body>
 </html>
